--- a/web-mobile/index.html
+++ b/web-mobile/index.html
@@ -48,9 +48,9 @@
     </div>
   </div>
 
-<script src="src/settings.c4a1f.js" charset="utf-8"></script>
+<script src="src/settings.cb429.js" charset="utf-8"></script>
 
-<script src="main.9c6f7.js" charset="utf-8"></script>
+<script src="main.ecc53.js" charset="utf-8"></script>
 
 <script type="text/javascript">
 (function () {
