--- a/web-mobile/index.html
+++ b/web-mobile/index.html
@@ -48,9 +48,9 @@
     </div>
   </div>
 
-<script src="src/settings.1a75d.js" charset="utf-8"></script>
+<script src="src/settings.72d12.js" charset="utf-8"></script>
 
-<script src="main.8f9d5.js" charset="utf-8"></script>
+<script src="main.16366.js" charset="utf-8"></script>
 
 <script type="text/javascript">
 (function () {
@@ -76,9 +76,9 @@
       document.body.appendChild(domScript);
     }
 
-    loadScript(debug ? 'cocos2d-js.c36c6.js' : 'cocos2d-js-min.js', function () {
+    loadScript(debug ? 'cocos2d-js.js' : 'cocos2d-js-min.cab18.js', function () {
       if (CC_PHYSICS_BUILTIN || CC_PHYSICS_CANNON) {
-        loadScript(debug ? 'physics.5724c.js' : 'physics-min.js', window.boot);
+        loadScript(debug ? 'physics.js' : 'physics-min.b6620.js', window.boot);
       }
       else {
         window.boot();
