--- a/web-mobile/index.html
+++ b/web-mobile/index.html
@@ -48,9 +48,9 @@
     </div>
   </div>
 
-<script src="src/settings.72d12.js" charset="utf-8"></script>
+<script src="src/settings.b86f7.js" charset="utf-8"></script>
 
-<script src="main.16366.js" charset="utf-8"></script>
+<script src="main.be1ea.js" charset="utf-8"></script>
 
 <script type="text/javascript">
 (function () {
