--- a/index.html
+++ b/index.html
@@ -4,4 +4,11 @@
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
 </body>
+
+<h1>合成大西瓜</h1>
+<a href="./web-mobile/index.html">链接</a>
+
+<h1>贪吃蛇2D</h1>
+<a href="./web-mobile/index.html">链接</a>
+
 </html>
