--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 <a href="./web-mobile/index.html">链接</a>
 
 <h1>贪吃蛇2D</h1>
-<a href="./web-mobile/index.html">链接</a>
+<a href="./snake-2d/index.html">链接</a>
 
 </html>
