文字贪吃蛇build v1

--- a/index.html
+++ b/index.html
@@ -11,4 +11,7 @@
 <h1>贪吃蛇2D</h1>
 <a href="./snake-2d/index.html">链接</a>
 
+<h1>文字贪吃蛇</h1>
+<a href="./snake-text/web-mobile/index.html">链接</a>
+
 </html>
