--- a/snake-text/web-mobile/index.html
+++ b/snake-text/web-mobile/index.html
@@ -48,9 +48,9 @@
     </div>
   </div>
 
-<script src="src/settings.f1a85.js" charset="utf-8"></script>
+<script src="src/settings.f930b.js" charset="utf-8"></script>
 
-<script src="main.03541.js" charset="utf-8"></script>
+<script src="main.30c46.js" charset="utf-8"></script>
 
 <script type="text/javascript">
 (function () {
@@ -76,9 +76,9 @@
       document.body.appendChild(domScript);
     }
 
-    loadScript(debug ? 'cocos2d-js.js' : 'cocos2d-js-min.92bc5.js', function () {
+    loadScript(debug ? 'cocos2d-js.4f0eb.js' : 'cocos2d-js-min.js', function () {
       if (CC_PHYSICS_BUILTIN || CC_PHYSICS_CANNON) {
-        loadScript(debug ? 'physics.js' : 'physics-min.b5fcb.js', window.boot);
+        loadScript(debug ? 'physics.fc54f.js' : 'physics-min.js', window.boot);
       }
       else {
         window.boot();
