--- a/snake-text/web-mobile/index.html
+++ b/snake-text/web-mobile/index.html
@@ -48,9 +48,9 @@
     </div>
   </div>
 
-<script src="src/settings.f930b.js" charset="utf-8"></script>
+<script src="src/settings.212ce.js" charset="utf-8"></script>
 
-<script src="main.30c46.js" charset="utf-8"></script>
+<script src="main.4edbf.js" charset="utf-8"></script>
 
 <script type="text/javascript">
 (function () {
