--- a/index.html
+++ b/index.html
@@ -14,4 +14,7 @@
 <h1>文字贪吃蛇</h1>
 <a href="./snake-text/web-mobile/index.html">链接</a>
 
+<h1>动物三消（羊了个羊）</h1>
+<a href="./sheep-3match/index.html">链接</a>
+
 </html>
